# ChangeLog for app-text/a2ps
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/a2ps/ChangeLog,v 1.43 2005/09/16 21:13:35 grobian Exp $

  16 Sep 2005; Fabian Groffen <grobian@gentoo.org> a2ps-4.13c-r3.ebuild:
  Marking ~ppc-macos (bug #105878)

*a2ps-4.13c-r3 (30 Aug 2005)

  30 Aug 2005; Luis Medinas <metalgod@gentoo.org>
  +files/a2ps-4.13c-stdarg.patch, +a2ps-4.13c-r3.ebuild:
  Added a new patch to fix build on AMD64 thanks to Holger Thon
  <ht_gentoo04@arcor.de>. Clean up the ebuild

  07 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org> :
  Fixed digest. Thanks to swegeners autorepoman.

  07 Jun 2005; Heinrich Wendel <lanius@gentoo.org>
  +files/a2ps-4.13-acroread.patch, a2ps-4.13c-r2.ebuild:
  fix sandbox violation, bug #79012

  22 Feb 2005; Rob Holland <tigger@gentoo.org> a2ps-4.13c-r2.ebuild:
  fix typo

  21 Feb 2005; Heinrich Wendel <lanius@gentoo.org> -a2ps-4.13c-r1.ebuild,
  a2ps-4.13c-r2.ebuild:
  also builds with bison; fix compilation on non posix locale

  04 Jan 2005; Sven Wegener <swegener@gentoo.org> :
  Added missing digest entries.

*a2ps-4.13c-r2 (03 Jan 2005)

  03 Jan 2005; Heinrich Wendel <lanius@gentoo.org>
  -files/a2ps-4.13-autoconf-gentoo.diff, +files/a2ps-4.13c-fixps.patch,
  +files/a2ps-4.13c-psmandup.diff, -a2ps-4.13b-r5.ebuild,
  -a2ps-4.13b-r6.ebuild, +a2ps-4.13c-r2.ebuild, -a2ps-4.13c.ebuild:
  security bump; bug #75784

  29 Dec 2004; Daniel Goller <morfic@gentoo.org> a2ps-4.13c-r1.ebuild:
  Fixing what needs fixing, libtoolize --copy --force

*a2ps-4.13b-r6 (28 Aug 2004)

  28 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  +files/a2ps-4.13-select-freebsd.patch, +a2ps-4.13b-r6.ebuild,
  +a2ps-4.13c-r1.ebuild:
  Security fix: bug #61500. Thanks to vorlon <vorlon@vorlons.info>
  and Sune Kloppenborg Jeppesen <jaervosz@gentoo.org>.

  05 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> -a2ps-4.13b-r4.ebuild,
  a2ps-4.13b-r5.ebuild, a2ps-4.13c.ebuild: