@@ -1,13 +1,45 @@
+MD5 3fb11b7579137c65ba6eb07b2051a512 ChangeLog 6519
+RMD160 08f7455e6a40180b870394c741d0b19251198f3c ChangeLog 6519
+SHA256 e81aa6886aa586424ec416cd2025870e65bbca1c11731ded51615d6d37e97214 ChangeLog 6519
 MD5 b6f6a3f75332862ddaedfdc1afae115b a2ps-4.13c-r2.ebuild 2022
+RMD160 60c8d05d29df079262a037dec7f96210ed37a40c a2ps-4.13c-r2.ebuild 2022
+SHA256 7c5983de87604b4dab452c90a68fecd8fa2c72a1b429be30b420eea04702e152 a2ps-4.13c-r2.ebuild 2022
 MD5 7eaa73ce0837487954cad2f714922c15 a2ps-4.13c-r3.ebuild 2091
-MD5 51694f06c01b33905fa763da961a4117 ChangeLog 6321
-MD5 26dba0307103de2d599fe832e219de72 metadata.xml 178
-MD5 5a02e00e2362711886e28f0d28b299dd files/a2ps-4.13-stdout.diff 462
-MD5 df6bc895cc6fb0fd47f22fd1c36d1ed3 files/a2ps-4.13c-fixps.patch 549
-MD5 2e24d355a977969b83fce03510ebd7b8 files/a2ps-4.13c-stdarg.patch 1505
-MD5 43277fd40996b817e369f9851aad66f5 files/a2ps-4.13c-locale-gentoo.diff 981
-MD5 b4a7c4e217ab8f2fa45b3282ea68069a files/digest-a2ps-4.13c-r2 133
-MD5 b4a7c4e217ab8f2fa45b3282ea68069a files/digest-a2ps-4.13c-r3 133
-MD5 b62538dbd828d995bdc3ce36188b0768 files/a2ps-4.13-select-freebsd.patch 1582
-MD5 d68d0bfab547ef1ce70576c7a5570f13 files/a2ps-4.13c-psmandup.diff 569
+RMD160 1d9efad10860cc2985e6f71e38d48817de6f0b0e a2ps-4.13c-r3.ebuild 2091
+SHA256 4b43b1e300ed019298eb73b1ba2250e6a6e6278607fee7bf8bc5c16cb39714e5 a2ps-4.13c-r3.ebuild 2091
+MD5 99327aa4a82f4c55d800536c62738f5f a2ps-4.13c-r4.ebuild 2179
+RMD160 f0aa56853db768326f7c25c4e25b2b7bf85378ff a2ps-4.13c-r4.ebuild 2179
+SHA256 df415ab63abed7cf85354d482a6e2395fd1f2958f8417a0a8ce97d64e3b6e9ff a2ps-4.13c-r4.ebuild 2179
 MD5 449b2445dc0949a990a2b29cab89dc59 files/4.13c-gcc34.patch 348
+RMD160 c516143bb1528b70c3abd836abdf530eb60fd0bf files/4.13c-gcc34.patch 348
+SHA256 0e4ab84eed2dc0b73a5c393f16dea4687d4cc1d649186c2d2e8ccb7585f96159 files/4.13c-gcc34.patch 348
+MD5 b62538dbd828d995bdc3ce36188b0768 files/a2ps-4.13-select-freebsd.patch 1582
+RMD160 3046e537c2447788ada3ce69ae51dac7b3ef0376 files/a2ps-4.13-select-freebsd.patch 1582
+SHA256 1ef965e835524b4d45dbe98038817d48ebb0c152d7c2c62c1e3d29f85bb0e2ae files/a2ps-4.13-select-freebsd.patch 1582
+MD5 5a02e00e2362711886e28f0d28b299dd files/a2ps-4.13-stdout.diff 462
+RMD160 88b8723f90f4993495f084a3ce475f575fca99c5 files/a2ps-4.13-stdout.diff 462
+SHA256 bde80a714f5de1221ec828cf0f33859561510190e97b08f4ba62ab41ad26fc74 files/a2ps-4.13-stdout.diff 462
+MD5 df6bc895cc6fb0fd47f22fd1c36d1ed3 files/a2ps-4.13c-fixps.patch 549
+RMD160 b97b413747ddcb415e3de2a75e1e723bc817b076 files/a2ps-4.13c-fixps.patch 549
+SHA256 ac32464a1a9bb2f4f557a3567a94928e4d8cbdd20ebaee0e1811f076d7e7456e files/a2ps-4.13c-fixps.patch 549
+MD5 43277fd40996b817e369f9851aad66f5 files/a2ps-4.13c-locale-gentoo.diff 981
+RMD160 f7366bf6eba344e88c9e7179ddda3fdb9b1f24e4 files/a2ps-4.13c-locale-gentoo.diff 981
+SHA256 2878415235a2d23231e4295fba1adf0435ddcc539394f7ebe49cf23fdf76ec29 files/a2ps-4.13c-locale-gentoo.diff 981
+MD5 d68d0bfab547ef1ce70576c7a5570f13 files/a2ps-4.13c-psmandup.diff 569
+RMD160 8c9436d9b72a1a2e78f8325c53e1e36bc29e2fbe files/a2ps-4.13c-psmandup.diff 569
+SHA256 2e64be23e030ed0f08b243f0513800336d06739fc7e347a09c130958531b85cd files/a2ps-4.13c-psmandup.diff 569
+MD5 2e24d355a977969b83fce03510ebd7b8 files/a2ps-4.13c-stdarg.patch 1505
+RMD160 5e46f07ec9d37ab53262f9611397f19bf3bd0b6e files/a2ps-4.13c-stdarg.patch 1505
+SHA256 9e7e630386b694b90b0bc6454bedc7c102d46b8bb6a6246eabd37e8b6d639c68 files/a2ps-4.13c-stdarg.patch 1505
+MD5 b4a7c4e217ab8f2fa45b3282ea68069a files/digest-a2ps-4.13c-r2 133
+RMD160 6865f9fe5740b0650711c2375e778aa8b67885e6 files/digest-a2ps-4.13c-r2 133
+SHA256 127e39349b0515c0f629835aaaf3ff24ea5ce1d514ffdfa3966d34aee1ec1c9b files/digest-a2ps-4.13c-r2 133
+MD5 b4a7c4e217ab8f2fa45b3282ea68069a files/digest-a2ps-4.13c-r3 133
+RMD160 6865f9fe5740b0650711c2375e778aa8b67885e6 files/digest-a2ps-4.13c-r3 133
+SHA256 127e39349b0515c0f629835aaaf3ff24ea5ce1d514ffdfa3966d34aee1ec1c9b files/digest-a2ps-4.13c-r3 133
+MD5 5cb08b483ff3e6161e5bb5a385bcc259 files/digest-a2ps-4.13c-r4 491
+RMD160 c634cd7453cd6fda7c36b840d67f7b65bdd63565 files/digest-a2ps-4.13c-r4 491
+SHA256 6a13642030ff00965e9055a33ca0b4169dc93d99d73a357b553031b076a16fc0 files/digest-a2ps-4.13c-r4 491
+MD5 26dba0307103de2d599fe832e219de72 metadata.xml 178
+RMD160 1823829273be97b95b286540a3439d152281baf1 metadata.xml 178
+SHA256 70722a9097b3b57eb4b153054cc852b0938c47120de0fdfd233cac6b209b412a metadata.xml 178
