@@ -1,0 +1,6 @@
+MD5 e315466f75d99c0c1ca563d82f2ace2e a2ps-4.13c-ja_nls.patch.gz 38189
+RMD160 932f430064f77d65768d2d1701ea650ae1103bb0 a2ps-4.13c-ja_nls.patch.gz 38189
+SHA256 8bc15ae152205b184a609777ac29430780eadacba2fd90bfa1fe318e43bd781f a2ps-4.13c-ja_nls.patch.gz 38189
+MD5 97164e84ba911e4604155507e0893669 a2ps-4.13c.tar.gz 2395885
+RMD160 d6464e88236a4efa8377e37e29e548411cd9c863 a2ps-4.13c.tar.gz 2395885
+SHA256 dfdd509ef79040fb300b2709a8fc54d9562f3ce141184958e3c2303cb3cf4890 a2ps-4.13c.tar.gz 2395885
