@@ -1,6 +1,12 @@
 # ChangeLog for app-text/a2ps
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/a2ps/ChangeLog,v 1.43 2005/09/16 21:13:35 grobian Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/a2ps/ChangeLog,v 1.44 2006/02/07 22:20:58 genstef Exp $
+
+*a2ps-4.13c-r4 (07 Feb 2006)
+
+  07 Feb 2006; Stefan Schweizer <genstef@gentoo.org> +a2ps-4.13c-r4.ebuild:
+  Fix duplex printing thanks to Christian Mandel <chris.spacelab@gmx.net> in
+  bug #122026
 
   16 Sep 2005; Fabian Groffen <grobian@gentoo.org> a2ps-4.13c-r3.ebuild:
   Marking ~ppc-macos (bug #105878)
